--- a/Alumnos/nbproject/private/private.properties
+++ b/Alumnos/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Javi\\AppData\\Roaming\\NetBeans\\9.0\\build.properties
+user.properties.file=C:\\Users\\danie\\AppData\\Roaming\\NetBeans\\15\\build.properties
